# TechnoparkPrepC

./: README.md
C/: .gitignore  CMakeLists.txt
C++/DZ#4/: CMakeLists.txt  Student.cpp  Student.hpp  extra.cpp  extra.hpp  main.cpp  students.txt
C++/DZ#5/: CMakeLists.txt  TwoWayLinkedList.cpp  TwoWayLinkedList.hpp  main.cpp
C++/DZ#6/: CMakeLists.txt  Figure.hpp  main.cpp
C++/DZ#7/: CMakeLists.txt  main.cpp  set.hpp  string.cpp  string.hpp
C++/DZ#8/: CMakeLists.txt  MyFile.cpp  MyFile.hpp  file.txt  main.cpp
C/Challenge#2/: CMakeLists.txt  ListLib.so.1.0
C/Challenges/: file.txt  file1.txt  file3.txt  fill.py  main.c  matrix.c  matrix.h
C/DZ#1/: file.txt  main.c
C/DZ#2/: file.txt  file1.txt  file3.txt  fill.py  main.c  matrix.c  matrix.h
C/DZ#3/: CMakeLists.txt  file.txt  list.c  list.h  main.c  words.c  words.h
